--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio Landing Page</title>
+  <title>Bounce Back</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,68 +11,97 @@
     <!-- Header Section -->
     <header>
       <div class="profile">
-        <img src="./assets/Photo_new.jpeg" alt="Profile Picture">
+        <img src="./assets/king_matayo_original.JPG" alt="Profile Picture">
       </div>
       <div class="intro">
-        <h1>Your Name</h1>
+        <h1>Bounce Back</h1>
         <p>
-          I'm a data visualization expert passionate about storytelling through visuals. With experience in [industry/skills], I create engaging and impactful graphics to simplify complex data.
+          Lessons in decision-making, teamwork, and resilience from the NBA’s greatest players.
         </p>
         <p>
-          Email: your_email@example.com | Twitter: <a href="https://twitter.com/yourhandle">@yourhandle</a>
+          Email: kingmatayo.thefirst@gmail.com 
         </p>
       </div>
     </header>
 
     <!-- Recent Work Section -->
     <section class="recent-work">
-      <h2>Recent Work</h2>
+      <h2>Chapters</h2>
       <div class="work-gallery">
-        <a href="https://kingmatayo.github.io/1-lebron/1-lebron.html" target="_blank" class="work-item">
-          <img src="./assets/Lebron.jpg" alt="Project 1">
-          <h3>Project Title 1</h3>
+        <a href="https://kingmatayo.github.io/bounce-back/1-lebron/" target="_blank" class="work-item">
+          <img src="./assets/Lebron.jpg" alt="Chapter 1" width="220" height="220">
+          <h3>Chapter 1: LeBron James</h3>
+          <p>The chapter looks at the evolution of LeBron’s shot choices (2003–2024)</p>
+          <p class="date">12/07/2024</p>
+        </a>
+        <a href="https://kingmatayo.github.io/bounce-back/2-jordan/" target="_blank" class="work-item">
+          <img src="./assets/jordan.jpg" alt="Chapter 2" width="220" height="220">
+          <h3>Chapter 2: Michael Jordan</h3>
+          <p>This chapter explores Michael Jordan's ability to deliver in high-pressure moments and his relentless competitive spirit.</p>
+          <p class="date">12/15/2024</p>
+        </a>
+        <a href="https://kingmatayo.github.io/bounce-back/3-durant/" target="_blank" class="work-item">
+          <img src="./assets/durant.jpg" alt="Chapter 3" width="220" height="220">
+          <h3>Chapter 3: Kevin Durant</h3>
+          <p>This chapter examines Kevin Durant’s career through the lens of adaptability, personal growth, and resilience.</p>
+          <p class="date">12/15/2024</p>
+        </a>
+        <a href="https://kingmatayo.github.io/bounce-back/1-lebron/" target="_blank" class="work-item">
+          <img src="./assets/Lebron.jpg" alt="Chapter 4" width="220" height="220">
+          <h3>Chapter 1: LeBron James</h3>
           <p>Short description about the project.</p>
-          <p class="date">7/10/2021</p>
+          <p class="date">12/15/2024</p>
         </a>
         <a href="https://example.com/project2" target="_blank" class="work-item">
-          <img src="./assets/Curry.jpg" alt="Project 2">
+          <img src="./assets/Curry.jpg" alt="Chapter 5" width="220" height="220">
           <h3>Project Title 2</h3>
           <p>Short description about the project.</p>
-          <p class="date">5/20/2021</p>
+          <p class="date">12/15/2024</p>
         </a>
         <a href="https://example.com/project3" target="_blank" class="work-item">
-          <img src="./assets/speeding.jpg" alt="Project 3">
+          <img src="./assets/speeding.jpg" alt="Chapter 6" width="220" height="220">
           <h3>Project Title 3</h3>
           <p>Short description about the project.</p>
-          <p class="date">3/28/2021</p>
+          <p class="date">12/15/2024</p>
+        </a>
+        <a href="https://kingmatayo.github.io/bounce-back/1-lebron/" target="_blank" class="work-item">
+          <img src="./assets/Lebron.jpg" alt="Chapter 7" width="220" height="220">
+          <h3>Chapter 1: LeBron James</h3>
+          <p>Short description about the project.</p>
+          <p class="date">12/15/2024</p>
+        </a>
+        <a href="https://example.com/project2" target="_blank" class="work-item">
+          <img src="./assets/Curry.jpg" alt="Chapter 8" width="220" height="220">
+          <h3>Project Title 2</h3>
+          <p>Short description about the project.</p>
+          <p class="date">12/15/2024</p>
+        </a>
+        <a href="https://example.com/project3" target="_blank" class="work-item">
+          <img src="./assets/speeding.jpg" alt="Chapter 9" width="220" height="220">
+          <h3>Project Title 3</h3>
+          <p>Short description about the project.</p>
+          <p class="date">12/15/2024</p>
+        </a>
+        <a href="https://kingmatayo.github.io/bounce-back/1-lebron/" target="_blank" class="work-item">
+          <img src="./assets/Lebron.jpg" alt="Chapter 10" width="220" height="220">
+          <h3>Chapter 1: LeBron James</h3>
+          <p>Short description about the project.</p>
+          <p class="date">12/15/2024</p>
+        </a>
+        <a href="https://example.com/project2" target="_blank" class="work-item">
+          <img src="./assets/Curry.jpg" alt="Chapter 11" width="220" height="220">
+          <h3>Project Title 2</h3>
+          <p>Short description about the project.</p>
+          <p class="date">12/15/2024</p>
+        </a>
+        <a href="https://example.com/project3" target="_blank" class="work-item">
+          <img src="./assets/speeding.jpg" alt="Chapter 12" width="220" height="220">
+          <h3>Project Title 3</h3>
+          <p>Short description about the project.</p>
+          <p class="date">12/15/2024</p>
         </a>
       </div>
-    </section>
-
-    <!-- Previous Work / Archives Section -->
-    <section class="previous-work">
-      <h2>Previous Work / Archives</h2>
-      <div class="work-gallery">
-        <a href="https://example.com/project4" target="_blank" class="work-item">
-          <img src="work4.jpg" alt="Project 4">
-          <h3>Archived Project Title 1</h3>
-          <p>Brief description of this past project.</p>
-          <p class="date">2/14/2020</p>
-        </a>
-        <a href="https://example.com/project5" target="_blank" class="work-item">
-          <img src="work5.jpg" alt="Project 5">
-          <h3>Archived Project Title 2</h3>
-          <p>Brief description of this past project.</p>
-          <p class="date">9/10/2019</p>
-        </a>
-        <a href="https://example.com/project6" target="_blank" class="work-item">
-          <img src="work6.jpg" alt="Project 6">
-          <h3>Archived Project Title 3</h3>
-          <p>Brief description of this past project.</p>
-          <p class="date">6/25/2018</p>
-        </a>
-      </div>
-    </section>
+    </section>    
   </div>
 </body>
 </html>
