--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
           <p>This chapter examines Kevin Durant’s career through the lens of adaptability, personal growth, and resilience.</p>
           <p class="date">12/15/2024</p>
         </a>
-        <a href="https://kingmatayo.github.io/bounce-back/1-lebron/" target="_blank" class="work-item">
-          <img src="./assets/Lebron.jpg" alt="Chapter 4" width="220" height="220">
-          <h3>Chapter 1: LeBron James</h3>
-          <p>Short description about the project.</p>
+        <a href="https://kingmatayo.github.io/bounce-back/4-bird/" target="_blank" class="work-item">
+          <img src="./assets/bird.jpg" alt="Chapter 4" width="220" height="220">
+          <h3>Chapter 4: Larry Bird</h3>
+          <p>This chapter delves into Larry Bird’s basketball IQ and strategic thinking.</p>
           <p class="date">12/15/2024</p>
         </a>
-        <a href="https://example.com/project2" target="_blank" class="work-item">
-          <img src="./assets/Curry.jpg" alt="Chapter 5" width="220" height="220">
-          <h3>Project Title 2</h3>
-          <p>Short description about the project.</p>
+        <a href="https://kingmatayo.github.io/bounce-back/5-magic/" target="_blank" class="work-item">
+          <img src="./assets/magic.jpg" alt="Chapter 5" width="220" height="220">
+          <h3>Chapter 5: Magic Johnson</h3>
+          <p>This chapter delves into Magic Johnson’s unique leadership style and how he elevated the performance of his teammates.</p>
           <p class="date">12/15/2024</p>
         </a>
-        <a href="https://example.com/project3" target="_blank" class="work-item">
-          <img src="./assets/speeding.jpg" alt="Chapter 6" width="220" height="220">
-          <h3>Project Title 3</h3>
-          <p>Short description about the project.</p>
+        <a href="https://kingmatayo.github.io/bounce-back/6-duncan/" target="_blank" class="work-item">
+          <img src="./assets/duncan.jpg" alt="Chapter 6" width="220" height="220">
+          <h3>Chapter 6: Tim Duncan</h3>
+          <p>This chapter focuses on Tim Duncan’s understated but highly effective leadership style.</p>
           <p class="date">12/15/2024</p>
         </a>
         <a href="https://kingmatayo.github.io/bounce-back/1-lebron/" target="_blank" class="work-item">
