--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header>
       <div class="profile">
-        <img src="./assets/king_matayo_original.JPG" alt="Profile Picture">
+        <img src="./assets/basketball.jpg" alt="Profile Picture">
       </div>
       <div class="intro">
         <h1>Bounce Back</h1>
