finished v1 of index,html

--- a/index.html
+++ b/index.html
@@ -64,40 +64,40 @@
           <p>This chapter focuses on Tim Duncan’s understated but highly effective leadership style.</p>
           <p class="date">12/15/2024</p>
         </a>
-        <a href="https://kingmatayo.github.io/bounce-back/1-lebron/" target="_blank" class="work-item">
-          <img src="./assets/Lebron.jpg" alt="Chapter 7" width="220" height="220">
-          <h3>Chapter 1: LeBron James</h3>
-          <p>Short description about the project.</p>
+        <a href="https://kingmatayo.github.io/bounce-back/7-russell/" target="_blank" class="work-item">
+          <img src="./assets/russell.jpg" alt="Chapter 7" width="220" height="220">
+          <h3>Chapter 7: Bill Russell</h3>
+          <p>This chapter highlights Bill Russell’s legacy as a defensive anchor and team leader who prioritized collective success over individual accolades.</p>
           <p class="date">12/15/2024</p>
         </a>
-        <a href="https://example.com/project2" target="_blank" class="work-item">
-          <img src="./assets/Curry.jpg" alt="Chapter 8" width="220" height="220">
-          <h3>Project Title 2</h3>
-          <p>Short description about the project.</p>
+        <a href="https://kingmatayo.github.io/bounce-back/8-curry" target="_blank" class="work-item">
+          <img src="./assets/curry.jpg" alt="Chapter 8" width="220" height="220">
+          <h3>Chapter 8: Stephen Curry</h3>
+          <p>This chapter explores Steph Curry’s transformative impact on the NBA, focusing on how his revolutionary shooting and off-ball movement redefined team strategies.</p>
           <p class="date">12/15/2024</p>
         </a>
-        <a href="https://example.com/project3" target="_blank" class="work-item">
-          <img src="./assets/speeding.jpg" alt="Chapter 9" width="220" height="220">
-          <h3>Project Title 3</h3>
-          <p>Short description about the project.</p>
+        <a href="https://kingmatayo.github.io/bounce-back/9-kareem" target="_blank" class="work-item">
+          <img src="./assets/kareem.jpg" alt="Chapter 9" width="220" height="220">
+          <h3>Chapter 9: Kareem Abdul Jabbar</h3>
+          <p>This chapter highlights Kareem’s unparalleled career, focusing on how his Skyhook redefined basketball and his ability to sustain excellence across decades.</p>
           <p class="date">12/15/2024</p>
         </a>
-        <a href="https://kingmatayo.github.io/bounce-back/1-lebron/" target="_blank" class="work-item">
-          <img src="./assets/Lebron.jpg" alt="Chapter 10" width="220" height="220">
-          <h3>Chapter 1: LeBron James</h3>
-          <p>Short description about the project.</p>
+        <a href="https://kingmatayo.github.io/bounce-back/10-kobe/" target="_blank" class="work-item">
+          <img src="./assets/kobe.jpg" alt="Chapter 10" width="220" height="220">
+          <h3>Chapter 10: Kobe Bryant</h3>
+          <p>This chapter explores Kobe Bryant’s obsessive work ethic and “Mamba Mentality,” focusing on how relentless preparation and resilience shaped his career.</p>
           <p class="date">12/15/2024</p>
         </a>
-        <a href="https://example.com/project2" target="_blank" class="work-item">
-          <img src="./assets/Curry.jpg" alt="Chapter 11" width="220" height="220">
-          <h3>Project Title 2</h3>
-          <p>Short description about the project.</p>
+        <a href="https://kingmatayo.github.io/bounce-back/11-shaq/" target="_blank" class="work-item">
+          <img src="./assets/shaq.jpg" alt="Chapter 11" width="220" height="220">
+          <h3>Chapter 11: Shaquille O'Neal</h3>
+          <p>This chapter highlights Shaq’s physical dominance and larger-than-life persona, exploring how embracing unique strengths can lead to extraordinary impact.</p>
           <p class="date">12/15/2024</p>
         </a>
-        <a href="https://example.com/project3" target="_blank" class="work-item">
-          <img src="./assets/speeding.jpg" alt="Chapter 12" width="220" height="220">
-          <h3>Project Title 3</h3>
-          <p>Short description about the project.</p>
+        <a href="https://kingmatayo.github.io/bounce-back/12-hakeem" target="_blank" class="work-item">
+          <img src="./assets/hakeem.jpg" alt="Chapter 12" width="220" height="220">
+          <h3>Chapter 12: Hakeem Olajuwon </h3>
+          <p>This chapter focuses on Hakeem’s precision, patience, and mastery of fundamentals, particularly his footwork.</p>
           <p class="date">12/15/2024</p>
         </a>
       </div>
