Added appendices A n B + Intro

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <section class="recent-work">
       <h2>Chapters</h2>
       <div class="work-gallery">
+        <a href="https://kingmatayo.github.io/bounce-back/15-intro/" target="_blank" class="work-item">
+          <img src="./assets/intro.jpg" alt="Introduction" width="220" height="220">
+          <h3>Introduction</h3>
+          <p>This introduces the book and me - the author</p>
+          <p class="date">12/20/2024</p>
+        </a>
         <a href="https://kingmatayo.github.io/bounce-back/1-lebron/" target="_blank" class="work-item">
           <img src="./assets/Lebron.jpg" alt="Chapter 1" width="220" height="220">
           <h3>Chapter 1: LeBron James</h3>
@@ -99,6 +105,18 @@
           <h3>Chapter 12: Hakeem Olajuwon </h3>
           <p>This chapter focuses on Hakeem’s precision, patience, and mastery of fundamentals, particularly his footwork.</p>
           <p class="date">12/15/2024</p>
+        </a>
+        <a href="https://kingmatayo.github.io/bounce-back/13-appendixA/" target="_blank" class="work-item">
+          <img src="./assets/business.jpg" alt="AppendixA" width="220" height="220">
+          <h3>Appendix A</h3>
+          <p>This first appendix looks at how entrepreneurship is similar to shooting from the 3PT line</p>
+          <p class="date">12/20/2024</p>
+        </a>
+        <a href="https://kingmatayo.github.io/bounce-back/14-appendixB/" target="_blank" class="work-item">
+          <img src="./assets/prospect.jpg" alt="Introduction" width="220" height="220">
+          <h3>Appendix B</h3>
+          <p>This second appendix looks at shot choices through the lens of prospect theory</p>
+          <p class="date">12/20/2024</p>
         </a>
       </div>
     </section>    
