working on the last viz trend analysis

--- a/1-lebron/index.html
+++ b/1-lebron/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="King Matayo">
 <meta name="dcterms.date" content="2024-12-07">
 
-<title>The Evolution of LeBron’s Shot Choices (2003–2024)</title>
+<title>The King of Adaptability</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -49,8 +49,6 @@ ul.task-list li input[type="checkbox"] {
 
       .quarto-title-block .quarto-title-banner {
         color: black;
-background-image: url(./assets/lebron-collage.jpg);
-background-size: cover;
       }
 </style>
 
@@ -63,8 +61,8 @@ background-size: cover;
 <header id="title-block-header" class="quarto-title-block default toc-left page-columns page-full">
   <div class="quarto-title-banner page-columns page-full">
     <div class="quarto-title column-body">
-      <h1 class="title"><span style="color:white">The Evolution of LeBron’s Shot Choices (2003–2024)</span></h1>
-            <p class="subtitle lead">How the King’s shot selection mirrors the NBA’s transformation</p>
+      <h1 class="title"><span style="color:white">The King of Adaptability</span></h1>
+            <p class="subtitle lead">How the evolution of LeBron’s shot choices mirrors the NBA’s transformation (2003-2024)</p>
                       </div>
   </div>
     
