Updated lebron story with final chart

--- a/1-lebron/index.html
+++ b/1-lebron/index.html
@@ -209,7 +209,16 @@ ul.task-list li input[type="checkbox"] {
 <h1>LeBron as a mirror to the NBA</h1>
 <p>LeBron’s career isn’t just about scoring points. It’s about reflecting the game’s evolution.</p>
 <p>The mid-range game, once the foundation of basketball, is now a relic. Analytics proved that long-range shots and finishes at the rim were more valuable, and the league responded. LeBron’s shift from mid-range jumpers to three-pointers wasn’t just personal growth - it was basketball growth.</p>
-<p>Consider this: In 2003, NBA teams averaged just 14 three-point attempts per game. By 2023, that number had more than doubled to 35. LeBron adapted not because he wanted to - but because he had to.</p>
+<p>Consider this: In 2004, around 10% of all shot attempts made in the NBA, per season, were 3PT-ers. By 2024, that percentage had skyrocketed to over 30%. LeBron adapted not because he wanted to - but because he had to.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="index_files/figure-html/unnamed-chunk-8-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
 <p>The NBA’s greatest players aren’t just defined by their talent. They’re defined by how well they adjust when the rules of the game change.</p>
 </section>
 <section id="what-his-journey-can-teach-us" class="level1">
