--- a/1-lebron/index.html
+++ b/1-lebron/index.html
@@ -93,7 +93,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#a-rookies-first-shot" id="toc-a-rookies-first-shot" class="nav-link active" data-scroll-target="#a-rookies-first-shot">A rookie’s first shot</a></li>
+  <li><a href="#a-rookies-first-game" id="toc-a-rookies-first-game" class="nav-link active" data-scroll-target="#a-rookies-first-game">A rookie’s first game</a></li>
   <li><a href="#the-power-of-playing-to-your-strengths" id="toc-the-power-of-playing-to-your-strengths" class="nav-link" data-scroll-target="#the-power-of-playing-to-your-strengths">2003-2008: The power of playing to your strengths</a></li>
   <li><a href="#learning-to-adapt" id="toc-learning-to-adapt" class="nav-link" data-scroll-target="#learning-to-adapt">2009-2015: Learning to adapt</a></li>
   <li><a href="#embracing-the-new-reality" id="toc-embracing-the-new-reality" class="nav-link" data-scroll-target="#embracing-the-new-reality">2016-2024: Embracing the new reality</a></li>
@@ -111,9 +111,9 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<section id="a-rookies-first-shot" class="level1 page-columns page-full">
-<h1>A rookie’s first shot</h1>
-<p>In my experience, the simplest decisions often reveal the most about who we are, at any given point in time.</p>
+<p><em>“It is our choices that show what we truly are, far more than our abilities.”</em> – J.K. Rowling</p>
+<section id="a-rookies-first-game" class="level1 page-columns page-full">
+<h1>A rookie’s first game</h1>
 <p>On October 29, 2003, 18-year-old LeBron James made his first shot decision as an NBA player. It wasn’t a flashy dunk or a deep three. It was a mid-range jumper - plain, efficient, unremarkable. Two points.</p>
 
 <div class="no-row-height column-margin column-container"><div class="">
@@ -124,11 +124,16 @@ ul.task-list li input[type="checkbox"] {
 <div class="no-row-height column-margin column-container"><div class="">
 <p><a href="https://youtu.be/7-q0NDE-_bw?si=mcOFaFomUdgVMu6w" target="_blank">LeBron, 20 years later: October 29, 2023</a></p>
 </div></div><p>LeBron’s first shot wasn’t just the start of his career. It was a snapshot of a moment in time. And what’s fascinating is how his evolution mirrors the evolution of the league itself. His choices on the court became a masterclass in adaptation.</p>
-<p>This is the story of how LeBron’s shot selection changed over two decades, and how those choices reflect the shifting forces that reshaped the game of basketball.</p>
 <div class="tabset-margin-container"></div><div class="panel-tabset nav-pills">
-<ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-1-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-1" role="tab" aria-controls="tabset-1-1" aria-selected="true" href="">LeBron’s first NBA game chart</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-2" role="tab" aria-controls="tabset-1-2" aria-selected="false" href="">20 years later</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-3-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-3" role="tab" aria-controls="tabset-1-3" aria-selected="false" href="">Comparison: 2003 vs 2023</a></li></ul>
+<ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-1-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-1" role="tab" aria-controls="tabset-1-1" aria-selected="true" href="">1st NBA game</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-2" role="tab" aria-controls="tabset-1-2" aria-selected="false" href="">20 years later</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-3-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-3" role="tab" aria-controls="tabset-1-3" aria-selected="false" href="">Comparing 2003 vs 2023</a></li></ul>
 <div class="tab-content nav-pills">
 <div id="tabset-1-1" class="tab-pane active" role="tabpanel" aria-labelledby="tabset-1-1-tab">
+<p><img src="assets/rookie_shot_chart.png" class="img-fluid"></p>
+</div>
+<div id="tabset-1-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-2-tab">
+<p><img src="assets/veteran_shot_chart.png" class="img-fluid"></p>
+</div>
+<div id="tabset-1-3" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-3-tab">
 <div class="cell">
 <div class="cell-output-display">
 <div>
@@ -139,31 +144,9 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-<div id="tabset-1-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-2-tab">
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="index_files/figure-html/unnamed-chunk-3-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
 </div>
 </div>
-</div>
-</div>
-<div id="tabset-1-3" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-3-tab">
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="index_files/figure-html/unnamed-chunk-4-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<p>…</p>
+<p>This is the story of how LeBron’s shot selection changed over two decades, and how those choices reflect the shifting forces that reshaped the game of basketball.</p>
 </section>
 <section id="the-power-of-playing-to-your-strengths" class="level1 page-columns page-full">
 <h1>2003-2008: The power of playing to your strengths</h1>
@@ -214,7 +197,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="index_files/figure-html/unnamed-chunk-8-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="index_files/figure-html/unnamed-chunk-6-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
