made some edits to the intro

--- a/15-intro/index.html
+++ b/15-intro/index.html
@@ -99,7 +99,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<p>In 1997, when I was ten years old, my cousin handed me a basketball. That simple act introduced me to a world of competition, creativity, and resilience that has shaped how I think about life. For years, I spent countless hours on the court and in front of the screen, mesmerized by players who made the extraordinary look effortless.</p>
+<p>In 1997, when I was ten years old, my cousin handed me a basketball and taught me the game. That simple act introduced me to a world of sports, competition, creativity, and resilience that has shaped how I think about life. For years, I spent countless hours on the court and in front of the screen, mesmerized by players who made the extraordinary look effortless.</p>
 <p>Some memories of the game are seared into my mind. The 2006 and 2016 NBA Finals weren’t just sporting events—they were epics of resilience and grit. They taught me that in basketball, as in life, no challenge is insurmountable, and no deficit is final.</p>
 <p>As adulthood demanded more of my time, my relationship with basketball changed. In 2012, I began my career as a management consultant, and while the game I loved took a backseat, my passion for it never faded. I kept following the NBA as it evolved, witnessing players like Stephen Curry redefine what it means to be great.</p>
 <p>But as the years went by, I started seeing basketball differently. My work taught me to uncover patterns, analyze decisions, and tell stories using data. I began applying those skills to the sport, exploring the wealth of data that now surrounds the NBA. What I found were fascinating insights into the decisions, trade-offs, and judgment calls that separate the good from the great.</p>
@@ -111,10 +111,10 @@ ul.task-list li input[type="checkbox"] {
 </ol>
 <p>Greatness begins with decisions. Whether it’s choosing when to take the shot, how to adapt to changing circumstances, or outthinking the opposition, these moments define a career.</p>
 <ul>
-<li><p><em>LeBron James: Shot Choices explores how a superstar navigates the trade-offs between risk and reward.</em></p></li>
-<li><p><em>Michael Jordan: Seizing the Moment delves into his uncanny ability to rise when it mattered most.</em></p></li>
-<li><p><em>Kevin Durant: Thriving Through Change highlights the courage to reinvent oneself.</em></p></li>
-<li><p><em>Larry Bird: Outsmarting the Opposition showcases how intelligence can rival athleticism</em>.</p></li>
+<li><p><em>LeBron James: The King of Adaptability explores how a superstar evolves and transforms himself again and again in order to remain relevant.</em></p></li>
+<li><p><em>Michael Jordan: Mr.&nbsp;Clutch delves into his uncanny ability to rise when it mattered most.</em></p></li>
+<li><p><em>Kevin Durant: The Shape Shifter highlights the courage to reinvent oneself.</em></p></li>
+<li><p><em>Larry Bird: The Chess Player showcases how basketball IQ can rival athleticism</em>.</p></li>
 </ul>
 <ol start="2" type="1">
 <li><strong>Leadership and Team Dynamics</strong></li>
@@ -124,7 +124,7 @@ ul.task-list li input[type="checkbox"] {
 <li><p><em>Magic Johnson: The Selfless Playmaker reveals the power of putting the team first.</em></p></li>
 <li><p><em>Tim Duncan: Leading with Consistency examines the quiet leadership that built a dynasty.</em></p></li>
 <li><p><em>Bill Russell: The Pillar of a Dynasty reflects on the essence of teamwork and sacrifice.</em></p></li>
-<li><p><em>Stephen Curry: Leading Through Innovation explores how creativity reshaped an entire era</em>.</p></li>
+<li><p><em>Stephen Curry: Leading Through Innovation explores how creativity and risk taking reshaped an entire era</em>.</p></li>
 </ul>
 <ol start="3" type="1">
 <li><strong>Mastery and the Pursuit of Greatness</strong></li>
