--- a/1-lebron/index.html
+++ b/1-lebron/index.html
@@ -99,7 +99,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#embracing-the-new-reality" id="toc-embracing-the-new-reality" class="nav-link" data-scroll-target="#embracing-the-new-reality">2016-2024: Embracing the new reality</a></li>
   <li><a href="#lebron-as-a-mirror-to-the-nba" id="toc-lebron-as-a-mirror-to-the-nba" class="nav-link" data-scroll-target="#lebron-as-a-mirror-to-the-nba">LeBron as a mirror to the NBA</a></li>
   <li><a href="#what-his-journey-can-teach-us" id="toc-what-his-journey-can-teach-us" class="nav-link" data-scroll-target="#what-his-journey-can-teach-us">What his journey can teach us</a></li>
-  <li><a href="#sources" id="toc-sources" class="nav-link" data-scroll-target="#sources">Sources:</a></li>
+  <li><a href="#referencessourcescitations" id="toc-referencessourcescitations" class="nav-link" data-scroll-target="#referencessourcescitations">References/Sources/Citations:</a></li>
   </ul>
 </nav>
 </div>
@@ -128,10 +128,10 @@ ul.task-list li input[type="checkbox"] {
 <ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-1-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-1" role="tab" aria-controls="tabset-1-1" aria-selected="true" href="">1st NBA game</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-2" role="tab" aria-controls="tabset-1-2" aria-selected="false" href="">20 years later</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-3-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-3" role="tab" aria-controls="tabset-1-3" aria-selected="false" href="">Comparing 2003 vs 2023</a></li></ul>
 <div class="tab-content nav-pills">
 <div id="tabset-1-1" class="tab-pane active" role="tabpanel" aria-labelledby="tabset-1-1-tab">
-<p><img src="assets/rookie_shot_chart.png" class="img-fluid"></p>
+<p><img src="assets/final_rookie_shot_chart.png" class="img-fluid"></p>
 </div>
 <div id="tabset-1-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-2-tab">
-<p><img src="assets/veteran_shot_chart.png" class="img-fluid"></p>
+<p><img src="assets/final_veteran_shot_chart.png" class="img-fluid"></p>
 </div>
 <div id="tabset-1-3" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-3-tab">
 <div class="cell">
@@ -193,14 +193,10 @@ ul.task-list li input[type="checkbox"] {
 <p>LeBron’s career isn’t just about scoring points. It’s about reflecting the game’s evolution.</p>
 <p>The mid-range game, once the foundation of basketball, is now a relic. Analytics proved that long-range shots and finishes at the rim were more valuable, and the league responded. LeBron’s shift from mid-range jumpers to three-pointers wasn’t just personal growth - it was basketball growth.</p>
 <p>Consider this: In 2004, around 10% of all shot attempts made in the NBA, per season, were 3PT-ers. By 2024, that percentage had skyrocketed to over 30%. LeBron adapted not because he wanted to - but because he had to.</p>
-<div class="cell">
-<div class="cell-output-display">
-<div>
+<div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="index_files/figure-html/unnamed-chunk-6-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="assets/lebron_vs_league.gif" class="img-fluid quarto-figure quarto-figure-center figure-img"></p>
 </figure>
-</div>
-</div>
 </div>
 <p>The NBA’s greatest players aren’t just defined by their talent. They’re defined by how well they adjust when the rules of the game change.</p>
 </section>
@@ -214,9 +210,14 @@ ul.task-list li input[type="checkbox"] {
 <p>The King’s reign is a testament to one simple idea: if you want to last, you have to evolve.</p>
 <hr>
 </section>
-<section id="sources" class="level1">
-<h1>Sources:</h1>
-<p>To Be Included…</p>
+<section id="referencessourcescitations" class="level1">
+<h1>References/Sources/Citations:</h1>
+<ul>
+<li><p>Rowling, J.K. (1998). <em>Harry Potter and the Chamber of Secrets</em>. London: Bloomsbury Publishing. (Quote: “It is our choices that show what we truly are, far more than our abilities.” – Albus Dumbledore).</p></li>
+<li><p>YouTube (2018). <em>LeBron James’ first NBA game on October 29, 2003</em>. Available at: <a href="https://www.youtube.com/watch?v=JLjH0rrNFeU" class="uri">https://www.youtube.com/watch?v=JLjH0rrNFeU</a> (Accessed: 7 December 2024).</p></li>
+<li><p>YouTube (2023). <em>LeBron James’ NBA game, 20 years later, on October 29, 2023</em>. Available at: <a href="https://youtu.be/7-q0NDE-_bw" class="uri">https://youtu.be/7-q0NDE-_bw</a> (Accessed: 7 December 2024).</p></li>
+<li><p>Abresler, A. (n.d.). <em>nbastatR: A comprehensive R package for NBA statistics and analysis</em>. Available at: <a href="https://github.com/abresler/nbastatR" class="uri">https://github.com/abresler/nbastatR</a> (Accessed: 7 December 2024).</p></li>
+</ul>
 </section>
 
 </main>
