Updated index.html to show Appendix C

--- a/index.html
+++ b/index.html
@@ -113,10 +113,16 @@
           <p class="date">12/20/2024</p>
         </a>
         <a href="https://kingmatayo.github.io/bounce-back/14-appendixB/" target="_blank" class="work-item">
-          <img src="./assets/prospect.jpg" alt="Introduction" width="220" height="220">
+          <img src="./assets/prospect.jpg" alt="AppendixB" width="220" height="220">
           <h3>Appendix B</h3>
           <p>This second appendix looks at shot choices through the lens of prospect theory</p>
           <p class="date">12/20/2024</p>
+        </a>
+        <a href="https://kingmatayo.github.io/bounce-back/16-cookbook/" target="_blank" class="work-item">
+          <img src="./assets/chef.jpg" alt="AppendixC" width="220" height="220">
+          <h3>Appendix C</h3>
+          <p>This last appendix provides a cook book for making cool NBA charts using the highcharteR package</p>
+          <p class="date">02/09/2025</p>
         </a>
       </div>
     </section>    
